fixed footer text and icons not being visible

--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -25,7 +25,6 @@ body {
     border: 0 none;
     margin: 0;
     padding: 0;
-    color: $font-black;
 }
 
 ol, ul {
